use koa instead of express

--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "dorfmap-websockets",
   "dependencies": {
     "engine.io": "^1.5.1",
-    "express": "*",
-    "primus": "^3.0.2",
-    "primus-emit": "^0.1.2",
-    "primus-emitter": "^3.0.3",
-    "socket.io": "*"
+    "koa": "^2.0.0-alpha.3",
+    "primus": "^4.0.0",
+    "primus-emit": "^0.1.2"
   }
 }
