--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.1",
   "description": "dorfmap-websockets",
   "dependencies": {
-    "engine.io": "^1.5.1",
+    "engine.io": "1.6.6",
     "koa": "^2.0.0-alpha.3",
-    "primus": "^4.0.0",
-    "primus-emit": "^0.1.2"
+    "primus": "4.0.4",
+    "primus-emit": "1.0.0"
   }
 }
