--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "engine.io": "^1.6.8",
-    "koa": "^2.0.0-alpha.3",
-    "primus": "^4.0.5",
-    "primus-emit": "1.0.0"
+    "koa": "^2.4.1",
+    "primus": "^7.1.1",
+    "primus-emit": "1.0.0",
+    "uws": "^9.14.0"
   }
 }
