--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "koa": "^2.4.1",
     "primus": "^7.1.1",
-    "primus-emit": "1.0.0",
     "uws": "^9.14.0"
+  },
+  "devDependencies": {
+    "uglify-js": "^3.3.11"
   }
 }
