--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "primus": "^7.1.1",
-    "uws": "^9.14.0"
+    "socket.io": "^2.1.1"
   },
   "devDependencies": {
-    "uglify-js": "^3.3.11"
+    "uglify-js": "^3.4.9"
   }
 }
