--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "socket.io": "^2.1.1"
+    "engine.io": "^3.2.0"
   },
   "devDependencies": {
     "uglify-js": "^3.4.9"
