--- a/package.json
+++ b/package.json
@@ -6,10 +6,6 @@
   "scripts": {
     "start": "node app.js"
   },
-  "dependencies": {
-    "engine.io": "^3.2.0"
-  },
-  "devDependencies": {
-    "uglify-js": "^3.4.9"
-  }
+  "dependencies": {},
+  "devDependencies": {}
 }
